--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,10 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Install Migrate 
-      run: $ curl -L https://github.com/golang-migrate/migrate/releases/download/$version/migrate.$os-$arch.tar.gz | tar xvz
+      run: |
+        curl -L https://github.com/golang-migrate/migrate/releases/download/v4.15.2/migrate.linux-amd64.tar.gz | tar xvz
+        mv migrate.linux-amd64 /usr/bin/migrate
+        which migrate
 
     - name: Migrate DB 
       run: make migrateup
