--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Install Migrate 
       run: |
         curl -L https://github.com/golang-migrate/migrate/releases/download/v4.15.2/migrate.linux-amd64.tar.gz | tar xvz
-        mv migrate.linux-amd64 /usr/bin/migrate
+        mv migrate /usr/bin/migrate
         which migrate
 
     - name: Migrate DB 
