--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,13 +13,9 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-
     services:
-    
       postgres:
-      
         image: postgres:14
-        
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: P35Bxzz6K
@@ -33,24 +29,20 @@ jobs:
           --health-timeout 5s
           --health-retries 5
     steps:
-
     - uses: actions/checkout@v3
-
     - name: Install Migrate 
       run: |
         curl -L https://github.com/golang-migrate/migrate/releases/download/v4.15.2/migrate.linux-amd64.tar.gz | tar xvz
         sudo mv migrate /usr/bin/migrate
         which migrate
-
     - name: Migrate DB 
       run: make migrateup
-
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
         go-version: 1.19
       id: go
-
-
     - name: Test
       run: make test
+    - id: govulncheck
+      uses: golang/govulncheck-action@v1
