--- a/app.env
+++ b/app.env
@@ -1,3 +1,5 @@
 DB_DRIVER=postgres
 DB_URL=postgresql://postgres:P35Bxzz6K@localhost:5432/simple_bank?sslmode=disable
 ADDRESS=0.0.0.0:8080
+TOKEN_KEY=01234567890123456789012345678912
+ACCESS_TOKEN_DURATION=15m
