--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,4 +14,8 @@ services:
       - "8080:8080"
     environment:
       - DB_URL=postgresql://postgres:P35Bxzz6K@postgres:5432/simple_bank?sslmode=disable
-    
+      - GIN_MODE=release
+    depends_on:
+      - postgres
+    entrypoint: ["/app/wait-for.sh", "postgres:5432","--","/app/start.sh"]
+    command: ["/app/main"]
