--- a/app.env
+++ b/app.env
@@ -3,3 +3,4 @@ DB_URL=postgresql://postgres:P35Bxzz6K@localhost:5432/simple_bank?sslmode=disabl
 ADDRESS=0.0.0.0:8080
 TOKEN_KEY=01234567890123456789012345678912
 ACCESS_TOKEN_DURATION=15m
+REFRESH_TOKEN_DURATION=24h
